Fixes overflow-y of docs sidebar

--- a/src/templates/docs/_docs.scss
+++ b/src/templates/docs/_docs.scss
@@ -1,6 +1,10 @@
 /* Navigation
 	 ========================================================================== */
 
+.docs .sidebar {
+	overflow-y: auto;
+}
+
 .docs-nav-container {
 	position: relative;
 	display: none;
